--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
             <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tinet.ccic.3dparty.jwebsocket</groupId>
+            <artifactId>jwebsocket-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
